cmake_minimum_required(VERSION 3.10)
add_subdirectory(assert)
add_subdirectory(concept_check)
add_subdirectory(config)
add_subdirectory(container_hash)
add_subdirectory(conversion)
add_subdirectory(core)
add_subdirectory(detail)
add_subdirectory(filesystem)
add_subdirectory(function_types)
add_subdirectory(fusion)
add_subdirectory(integer)
add_subdirectory(io)
add_subdirectory(iterator)
add_subdirectory(move)
add_subdirectory(mpl)
add_subdirectory(optional)
add_subdirectory(predef)
add_subdirectory(preprocessor)
add_subdirectory(smart_ptr)
add_subdirectory(static_assert)
add_subdirectory(system)
add_subdirectory(throw_exception)
add_subdirectory(tuple)
add_subdirectory(typeof)
add_subdirectory(type_traits)
add_subdirectory(utility)
add_subdirectory(winapi)

add_subdirectory(test_app)
